Rubiks cube regular

--- a/todo
+++ b/todo
@@ -10,3 +10,12 @@ Binary tiny cube projection (36x)
 
 Get animations for all the 4 objects
 Animations for spinning cube projection?
+
+
+
+
+
+Pepper spray size: 95mm x 22mm diameter
+Our model: ~ 97 x 23mm
+
+Cube size:
